--- a/style.css/mystyle.css
+++ b/style.css/mystyle.css
@@ -72,3 +72,14 @@ a{
     border-radius: 5px;
     padding: 1rem;
 }
+.alert-error{
+    background-color: red;
+}
+
+.hidden{
+    display: none;
+}
+
+.alert-success{
+    background-color: green;
+}
