--- a/style.css/mystyle.css
+++ b/style.css/mystyle.css
@@ -83,3 +83,22 @@ a{
 .alert-success{
     background-color: green;
 }
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+image {
+    max-width: 25%;
+    max-height: 15%;
+    float: left;
+}
+
+.text{
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 20%;
+    float: left;
+}
