--- a/style.css/mystyle.css
+++ b/style.css/mystyle.css
@@ -83,7 +83,7 @@ a{
 .alert-success{
     background-color: green;
 }
-
+/*bottom image and testimonal*/
 .container{
     display: flex;
     align-items: center;
